更新至3.0.0-beta.10，调整recipe_tweak数据包的名称和描述

--- a/src/main/resources/assets/extshape/lang/lzh.json
+++ b/src/main/resources/assets/extshape/lang/lzh.json
@@ -50,7 +50,8 @@
 
   "modmenu.nameTranslation.extshape": "塊形之擴",
 
-  "resourcePack.extshape.recipe_tweak.name": "修方（直方之撞）",
+  "resourcePack.extshape.recipe_tweak.name": "修方（塊形之擴）",
+  "resourcePack.extshape.recipe_tweak.description": "修是資囊之制方，以直預置之撞。直制方之撞之既載者，此錄囊可棄也。",
 
   "tag.block.extshape.pickaxe_unmineable": "無以鎬采",
   "tag.block.extshape.snow": "雪",
@@ -214,5 +215,4 @@
   "tag.item.extshape.concrete_vertical_quarter_pieces": "砼立條",
   "tag.item.extshape.terracotta_vertical_quarter_pieces": "陶立條",
   "tag.item.extshape.stained_terracotta_vertical_quarter_pieces": "既染陶立條"
-
 }
