--- a/src/main/resources/assets/extshape/lang/zh_hk.json
+++ b/src/main/resources/assets/extshape/lang/zh_hk.json
@@ -52,7 +52,8 @@
 
   "options.extshape.addToVanillaGroups.blockus": "請注意：如要喺創造模式中尋到 Blockus 模組中嘅擴展形狀嘅方塊，你需要啟用「添加至原版物品組」。呢啲方塊只會顯示喺 Blockus 嘅物品組中。Blockus 方塊嘅擴展形狀嘅方塊冇專用物品組。",
 
-  "resourcePack.extshape.recipe_tweak.name": "配方調整（修復模組與原版之間嘅配方衝突）",
+  "resourcePack.extshape.recipe_tweak.name": "配方調整",
+  "resourcePack.extshape.recipe_tweak.description": "調整擴展方塊形狀模組嘅些合成配方以修復同原版合成配方之間嘅衝突。如果安裝中咗能解決合成配方衝突嘅模組，可以禁用呢個數據包。",
 
   "tag.block.extshape.pickaxe_unmineable": "鎬唔可挖掘",
   "tag.block.extshape.snow": "雪",
@@ -216,5 +217,4 @@
   "tag.item.extshape.concrete_vertical_quarter_pieces": "混凝土縱條",
   "tag.item.extshape.terracotta_vertical_quarter_pieces": "陶瓦縱條",
   "tag.item.extshape.stained_terracotta_vertical_quarter_pieces": "染色陶瓦縱條"
-
 }
