更新至3.0.0-beta.10，调整recipe_tweak数据包的名称和描述

--- a/src/main/resources/assets/extshape/lang/en_us.json
+++ b/src/main/resources/assets/extshape/lang/en_us.json
@@ -52,5 +52,6 @@
 
   "options.extshape.addToVanillaGroups.blockus": "Please note: to find the extended shapes of blocks in Blockus mod in the creative inventory, you have to enable \"Add To Vanilla Groups\". The blocks only display in item groups of Blockus. There are no specific groups for extended shapes of blocks in Blockus mod.",
 
-  "resourcePack.extshape.recipe_tweak.name": "Recipe Tweak (to fix recipe conflict between the mod and vanilla)"
+  "resourcePack.extshape.recipe_tweak.name": "Recipe Tweak (Extended Block Shapes)",
+  "resourcePack.extshape.recipe_tweak.description": "Tweaks some crafting recipes of Extended Block Shapes mod to avoid conflict with vanilla crafting recipes. If you installed mods that solve conflicts between crafting recipes, you can disable this data pack."
 }
